--- a/.github/workflows/node-ci-cd.yml
+++ b/.github/workflows/node-ci-cd.yml
@@ -13,6 +13,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: copy .env.example to .env
+        run: cp .env.example .env
+
       - name: Set up Docker Compose
         run: docker-compose up -d
 
