fix: node ci/cd

--- a/.github/workflows/node-ci-cd.yml
+++ b/.github/workflows/node-ci-cd.yml
@@ -20,6 +20,7 @@ jobs:
         run: docker-compose up -d
 
       - name: Build and Test
-        run: docker-compose exec nest-vocabMinder npm run test:e2e
+        run: docker exec nest-vocabMinder npm run test:e2e
+
       - name: Clean Up
         run: docker-compose down
